@@ -4,6 +4,7 @@
     - jbj: rpm.spec: adjust to reality (popt needs to be in tarball, todo++).
 
 5.3.6 -> 5.3.7:
+    - proyvind: export rpmbf.h & rpmgi.h to public API.
     - proyvind: rpm4compat: add RPMTAG_FILENAMES & RPMDBI_LABEL.
     - proyvind: rpmconstant: update constants.
     - proyvind: rpmconstant: fix rpmh2tbl to error out for constants not found.
